name: conlecterm
version: 1.0
synopsis: A multi-tab terminal framwork
description:
            Display multiple terminals (rxvt, xterm) in their own tabs.
            .
            Other embeddable programs may also work (emacs, vim).

copyright: 2014-2015 Christopher Hall
license: BSD3
license-file: LICENSE.text
author: Christopher Hall <hsw@ms2.hinet.net>
maintainer: hsw@ms2.hinet.net
homepage: https://github.com/hxw/conlecterm
bug-reports: https://github.com/hxw/conlecterm

category: Graphics
cabal-version: >=1.10

build-type: Simple

-- source-repository head
--  type: git
--  location: https://github.com/hxw/conlecterm.git

extra-source-files:
                   README.md
                   LICENSE.text
                   conlecterm.desktop
                   config.rc

Executable conlecterm
  main-is: Main.hs
  build-tools: alex,
               happy
  build-depends: base >= 3 && < 5,
                 text,
                 mtl,
                 hashtables,
                 bytestring,
                 directory,
                 pango,
                 parsec,
                 unix,
                 process,
                 filepath,
                 aeson,
                 gtk3,
                 X11

  hs-source-dirs: src
  ghc-options: -Wall -fwarn-tabs
  default-language: Haskell2010

  other-modules: ConfigurationParser,
                 ProcessRunner,
                 SendControl,
                 SessionParser,
                 TerminalUI
